Fix align

--- a/css/style.css
+++ b/css/style.css
@@ -177,10 +177,10 @@ footer .divider {
 #visual-content {
     width: 80%;
     margin: auto;
+    text-align:center;
 }
 
 #home-svg-container {
-    padding-left:1.5%;
     width: 72.5vh;
     height:65vh;
     display: inline-block;
